--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "eslint-config-next": "^12.2.5"
   }
 }
